# gwmsmon

./: README.md  SPEC.md  deploy.sh  pyproject.toml
docs/: OPERATIONS.md  PLAN.md  SPEC.md
src/gwmsmon/: __init__.py  collector.py  config.py  convert.py  exitcodes.py  graphs.py  query.py  state.py  status_history.py  web.py
src/gwmsmon/static/: gwmsmon.js  style.css  theme.js
src/gwmsmon/templates/: base.html  exitcode.html  factoryview.html  factoryview_site.html  failed_jobs.html  group.html  log_viewer.html  overview.html  poolview.html  request.html  schedd.html  site.html  site_monitor.html  status.html  subtask.html  user.html
systemd/: gwmsmon-collect.service  gwmsmon-web.service
