[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gwmsmon"
version = "0.1.0"
description = "Monitoring service for CMS HTCondor global pool"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "flask",
    "matplotlib",
]

[project.scripts]
gwmsmon-collect = "gwmsmon.collector:main"
gwmsmon-web = "gwmsmon.web:main"

[tool.setuptools.packages.find]
where = ["src"]
